@@ -1,8 +1,12 @@
 package com.icandoit.boottalk.coffeeChat.service;
 
+import com.icandoit.boottalk.coffeeChat.dto.CoffeeChatInfoApprovedDto;
+import com.icandoit.boottalk.common.dto.PagedResponseDto;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -32,6 +36,7 @@ public class CoffeeChatApplicationService {
     @Transactional
     public CoffeeChatApplicationResponseDto createCoffeeChatApp(Long userId, CoffeeChatApplicationCreateDto request) {
         // TODO: 동일한 유저가 동일한 커피챗에 중복 신청 불가능하게 수정
+        // TODO: 커피챗 신청 성공 시, 해당 시간대의 커피챗에 다른 사용자가 신청 요청하지 못하도록 동시성 제어 필요
 
         User user = getUser(userId);
         CoffeeChatInfo coffeeChatInfo = getCoffeeChatInfo(request.coffeeChatInfoId());
@@ -50,20 +55,27 @@ public class CoffeeChatApplicationService {
         List<CoffeeChatApplication> coffeeChatApps = coffeeChatAppRepository.findByMentee_UserId(userId);
 
         return coffeeChatApps.stream()
-            .map(coffeeChatApp -> CoffeeChatApplicationResponseDto.from(coffeeChatApp))
-            .collect(Collectors.toList());
+            .map(CoffeeChatApplicationResponseDto::from)
+            .toList();
+
     }
+
+    @Transactional(readOnly = true)
+    public PagedResponseDto<CoffeeChatInfoApprovedDto> getApprovedCoffeeChats(Long userId, Pageable pageable) {
+        Page<CoffeeChatInfoApprovedDto> page = coffeeChatAppRepository.findApprovedChatsByUserId(userId, pageable)
+            .map(CoffeeChatInfoApprovedDto::from);
+
+        return PagedResponseDto.from(page);
+    }
+
 
     @Transactional
     public CoffeeChatApplicationResponseDto updateCoffeeChatApp(
         Long userId, Long coffeeChatAppId, CoffeeChatApplicationUpdateDto request) {
         CoffeeChatApplication coffeeChatApp = getCoffeeChatApplication(coffeeChatAppId);
 
-        validateCoffeeChatApplication(
-            userId,
-            coffeeChatApp.getMentee().getUserId(),
-            coffeeChatApp.getCoffeeChatInfo().getCoffeeChatInfoId()
-        );
+        validateCoffeeChatApplicant(userId, coffeeChatApp.getMentee().getUserId());
+        validateCoffeeChatInfo(coffeeChatApp.getCoffeeChatInfo().getCoffeeChatInfoId());
 
         // 상태가 대기 중일 때만 content 수정 가능
         if (coffeeChatApp.getStatus() != StatusType.PENDING) {
@@ -78,11 +90,9 @@ public class CoffeeChatApplicationService {
     @Transactional
     public void deleteCoffeeChatApp(Long userId, Long coffeeChatAppId) {
         CoffeeChatApplication coffeeChatApp = getCoffeeChatApplication(coffeeChatAppId);
-        validateCoffeeChatApplication(
-            userId,
-            coffeeChatApp.getMentee().getUserId(),
-            coffeeChatApp.getCoffeeChatInfo().getCoffeeChatInfoId()
-        );
+
+        validateCoffeeChatApplicant(userId, coffeeChatApp.getMentee().getUserId());
+        validateCoffeeChatInfo(coffeeChatApp.getCoffeeChatInfo().getCoffeeChatInfoId());
 
         coffeeChatAppRepository.delete(coffeeChatApp);
     }
@@ -98,18 +108,20 @@ public class CoffeeChatApplicationService {
             .orElseThrow(() -> new CustomException(ErrorCode.COFFEE_CHAT_NOT_FOUND));
     }
 
-    private CoffeeChatApplication getCoffeeChatApplication(Long coffeeChatAppId) {
+    protected CoffeeChatApplication getCoffeeChatApplication(Long coffeeChatAppId) {
         return coffeeChatAppRepository.findById(coffeeChatAppId)
             .orElseThrow(() -> new CustomException(ErrorCode.COFFEE_CHAT_APPLICATION_NOT_FOUND));
     }
 
-    private void validateCoffeeChatApplication(Long userId, Long menteeId, Long coffeeChatInfoId) {
-        // 해당 사용자가 작성한 커피챗 신청자인지 확인
+    // 해당 사용자가 작성한 커피챗 신청자인지 확인
+    private void validateCoffeeChatApplicant(Long userId, Long menteeId) {
         if (!userId.equals(menteeId)) {
             throw new CustomException(ErrorCode.NOT_COFFEE_CHAT_APPLICATION_OWNER);
         }
+    }
 
-        // 존재하는 커피챗 정보인지 확인
+    // 존재하는 커피챗 정보인지 확인
+    protected void validateCoffeeChatInfo(Long coffeeChatInfoId) {
         if(!coffeeChatInfoRepository.existsById(coffeeChatInfoId)) {
             throw new CustomException(ErrorCode.COFFEE_CHAT_NOT_FOUND);
         }
